# opusora

./: .gitignore  CMakeLists.txt
.github/workflows/: build-release.yml
app/: main.cpp
app/core/: AppPaths.cpp  AppPaths.hpp  Logger.cpp  Logger.hpp  TextEncoding.cpp  TextEncoding.hpp
app/db/: Database.cpp  Database.hpp
app/db/migrations/: 001_initial.sql
app/i18n/: TranslationService.cpp  TranslationService.hpp
app/integration/: MprisService.cpp  MprisService.hpp  NotificationService.cpp  NotificationService.hpp  TrayService.cpp  TrayService.hpp
app/metadata/: BasicMetadataReader.cpp  BasicMetadataReader.hpp  GStreamerMetadataReader.cpp  GStreamerMetadataReader.hpp  MetadataReader.hpp  MetadataReaderFactory.cpp  MetadataReaderFactory.hpp  MetadataTypes.hpp  OnlineMetadataService.cpp  OnlineMetadataService.hpp
app/player/: GStreamerPlayer.cpp  GStreamerPlayer.hpp  IAudioPlayer.hpp  NullAudioPlayer.cpp  NullAudioPlayer.hpp  PlaybackController.cpp  PlaybackController.hpp  PlaybackState.hpp
app/playlist/: PlaylistListModel.cpp  PlaylistListModel.hpp  PlaylistRepository.cpp  PlaylistRepository.hpp  QueueService.hpp
app/radio/: RadioStationModel.cpp  RadioStationModel.hpp
app/search/: SearchController.cpp  SearchController.hpp
app/settings/: SettingsService.cpp  SettingsService.hpp
app/ui/qml/: AppWindow.qml
app/ui/qml/components/: AddToPlaylistButton.qml  AddToQueueButton.qml  CoverImage.qml  EmptyState.qml  GlassButton.qml  GlassComboBox.qml  GlassPanel.qml  GlassSwitch.qml  GlassTextArea.qml  GlassTextField.qml  IconButton.qml  MacTitleBar.qml  PlayerBar.qml  ProgressSlider.qml  SearchBox.qml  Sidebar.qml  SidebarItem.qml  WindowTrafficButton.qml
app/ui/qml/pages/: AlbumsPage.qml  ArtistsPage.qml  GenresPage.qml  LibraryPage.qml  NowPlayingPage.qml  PlaylistsPage.qml  QueuePage.qml  RadioPage.qml  SearchResultsPage.qml  SettingsPage.qml  SongsPage.qml  WelcomePage.qml
app/ui/qml/theme/: Theme.qml
packaging/flatpak/: local.opusora.Opusora.yml
packaging/linux/: opusora.desktop  opusora.metainfo.xml  opusora.xml
scripts/: build-appimage.sh
